# cpp2_programming_project

./: .gitignore  CMakeLists.txt  README.md
include/: Course.h  Grade.h  Student.h  StudentList.h  Transcript.h
src/: Course.cpp  Grade.cpp  Main.cpp  Student.cpp  StudentList.cpp  Transcript.cpp
